Initial commit: DRT monorepo with driver and user apps

--- a/apps/driver-app/app.json
+++ b/apps/driver-app/app.json
@@ -45,6 +45,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "driver-app-project-id"
+      }
     }
   }
 }
