git initial commit monorepo

--- a/apps/driver-app/app.json
+++ b/apps/driver-app/app.json
@@ -3,6 +3,7 @@
     "name": "DRT Driver",
     "slug": "drt-driver",
     "version": "1.0.0",
+    "main": "expo-router/entry",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -32,7 +33,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "bundler": "metro"
+      "bundler": "metro",
+      "name": "DRT Driver"
     },
     "plugins": [
       "expo-router",
