--- a/apps/driver-app/package.json
+++ b/apps/driver-app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "dev": "expo start",
+    "dev": "expo start --port 8082 --clear",
     "dev:web": "expo start --web --port 8082 --clear",
     "start": "expo start",
     "android": "expo start --android",
@@ -19,6 +19,7 @@
     "@babel/runtime": "^7.28.4",
     "@drt/api-client": "workspace:*",
     "@drt/domain": "workspace:*",
+    "@drt/store": "workspace:*",
     "@drt/ui-native": "workspace:*",
     "@drt/utils": "workspace:*",
     "@tanstack/react-query": "^5.0.0",
