--- a/packages/ui-native/package.json
+++ b/packages/ui-native/package.json
@@ -13,10 +13,15 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@drt/api-client": "workspace:*",
+    "@drt/domain": "workspace:*",
+    "@drt/utils": "workspace:*",
     "react": "18.3.1",
     "react-native": "0.76.0",
     "react-native-safe-area-context": "4.12.0",
-    "nativewind": "^4.2.1"
+    "react-native-webview": "^13.6.0",
+    "nativewind": "^4.2.1",
+    "@tanstack/react-query": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "~18.3.0",
@@ -28,4 +33,3 @@
     "react-native": ">=0.70.0"
   }
 }
-
