refactor: 모노레포 구조 정리 및 서브모듈 해제
- user-app 서브모듈을 일반 디렉토리로 변경
- 중복된 파일들 제거 (루트의 app/, assets/, components/ 등)
- 공통 packages를 루트로 이동
- 올바른 모노레포 구조로 재구성
- 루트 package.json을 모노레포용으로 수정

--- a/package.json
+++ b/package.json
@@ -1,52 +1,34 @@
 {
-  "name": "user-app",
+  "name": "drt-monorepo",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "private": true,
+  "description": "DRT (Demand Responsive Transit) Monorepo",
   "scripts": {
-    "dev": "expo start --port 8081 --clear",
-    "dev:web": "expo start --web --port 8081 --clear",
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web --port 8081",
-    "build": "eas build",
-    "submit": "eas submit",
-    "lint": "echo 'No linting configured'",
-    "typecheck": "tsc --noEmit",
-    "clean": "rm -rf .expo node_modules"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.28.4",
-    "@drt/api-client": "workspace:*",
-    "@drt/domain": "workspace:*",
-    "@drt/store": "workspace:*",
-    "@drt/ui-native": "workspace:*",
-    "@drt/utils": "workspace:*",
-    "@tanstack/react-query": "^5.0.0",
-    "expo": "~52.0.0",
-    "expo-constants": "~17.0.0",
-    "expo-image": "~2.0.0",
-    "expo-linking": "~7.0.0",
-    "expo-location": "~18.0.0",
-    "expo-router": "~4.0.0",
-    "expo-status-bar": "~2.0.0",
-    "nativewind": "^4.2.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.0",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
-    "react-native-web": "~0.19.0",
-    "react-native-webview": "^13.16.0",
-    "zustand": "^4.4.0"
+    "dev:user": "turbo run dev --filter=user-app",
+    "dev:user:web": "turbo run dev:web --filter=user-app",
+    "dev:driver": "turbo run dev --filter=driver-app",
+    "dev:driver:web": "turbo run dev:web --filter=driver-app",
+    "dev:web": "echo 'Please specify which app: pnpm run dev:user:web or pnpm run dev:driver:web'",
+    "build": "turbo run build",
+    "build:user": "turbo run build --filter=user-app",
+    "build:driver": "turbo run build --filter=driver-app",
+    "lint": "turbo run lint",
+    "typecheck": "turbo run typecheck",
+    "test": "turbo run test",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\""
   },
   "devDependencies": {
-    "@expo/metro-config": "~0.18.0",
-    "@types/react": "~18.3.0",
-    "@types/react-dom": "~18.3.0",
-    "autoprefixer": "^10.4.21",
-    "tailwindcss": "^3.3.2",
-    "typescript": "~5.3.0"
+    "@types/node": "^20.0.0",
+    "eslint": "^8.0.0",
+    "prettier": "^3.0.0",
+    "turbo": "^1.10.0",
+    "typescript": "^5.0.0"
   },
-  "private": true
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
+  },
+  "packageManager": "pnpm@8.15.0"
 }
