--- a/packages/ui-native/package.json
+++ b/packages/ui-native/package.json
@@ -16,12 +16,13 @@
     "@drt/api-client": "workspace:*",
     "@drt/domain": "workspace:*",
     "@drt/utils": "workspace:*",
+    "@tanstack/react-query": "^5.0.0",
+    "nativewind": "^4.2.1",
     "react": "18.3.1",
     "react-native": "0.76.0",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-webview": "^13.6.0",
-    "nativewind": "^4.2.1",
-    "@tanstack/react-query": "^5.0.0"
+    "react-native-svg": "^15.14.0",
+    "react-native-webview": "^13.6.0"
   },
   "devDependencies": {
     "@types/react": "~18.3.0",
