위치정보 기반승차 정류장 엔드포인트 호출

--- a/apps/user-app/tsconfig.json
+++ b/apps/user-app/tsconfig.json
@@ -9,10 +9,15 @@
     "baseUrl": ".",
     "paths": {
       "@drt/api-client": ["../../packages/api-client/src"],
+      "@drt/api-client/*": ["../../packages/api-client/src/*"],
       "@drt/domain": ["../../packages/domain/src"],
+      "@drt/domain/*": ["../../packages/domain/src/*"],
       "@drt/store": ["../../packages/store/src"],
+      "@drt/store/*": ["../../packages/store/src/*"],
       "@drt/ui-native": ["../../packages/ui-native/src"],
-      "@drt/utils": ["../../packages/utils/src"]
+      "@drt/ui-native/*": ["../../packages/ui-native/src/*"],
+      "@drt/utils": ["../../packages/utils/src"],
+      "@drt/utils/*": ["../../packages/utils/src/*"]
     }
   },
   "include": [
