--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -34,8 +34,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.0",
+    "react-native-reanimated": "3.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-svg": "^15.14.0",
     "react-native-web": "~0.19.0",
     "react-native-webview": "^13.16.0",
     "zustand": "^4.4.0"
