--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -24,6 +24,7 @@
     "@drt/utils": "workspace:*",
     "@tanstack/react-query": "^5.0.0",
     "expo": "~52.0.0",
+    "expo-application": "~6.0.0",
     "expo-constants": "~17.0.0",
     "expo-image": "~2.0.0",
     "expo-linking": "~7.0.0",
