--- a/apps/driver-app/package.json
+++ b/apps/driver-app/package.json
@@ -6,8 +6,8 @@
     "dev": "expo start --port 8082 --clear",
     "dev:web": "expo start --web --port 8082 --clear",
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web --port 8082",
     "build": "eas build",
     "submit": "eas submit",
@@ -24,6 +24,7 @@
     "@drt/utils": "workspace:*",
     "@tanstack/react-query": "^5.0.0",
     "expo": "~52.0.0",
+    "expo-application": "~6.0.0",
     "expo-constants": "~17.0.0",
     "expo-image": "~2.0.0",
     "expo-linking": "~7.0.0",
@@ -37,15 +38,18 @@
     "react-native-reanimated": "3.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-svg": "^15.14.0",
     "react-native-web": "~0.19.0",
     "react-native-webview": "^13.16.0",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@expo/config-plugins": "^54.0.2",
     "@expo/metro-config": "~0.18.0",
     "@types/react": "~18.3.0",
     "@types/react-dom": "~18.3.0",
     "autoprefixer": "^10.4.21",
+    "schema-utils": "^4.3.3",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.0"
   },
