--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -48,6 +48,7 @@
     "@types/react": "~18.3.0",
     "@types/react-dom": "~18.3.0",
     "autoprefixer": "^10.4.21",
+    "schema-utils": "^4.3.3",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.0"
   },
