운전자앱, 유저앱 apk 배포 설정 완료, 유저앱 metro번들에서  process-env 경로 찾을 수 없는 버그 수정

--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "zod": "^3.22.0"
   },
+  "peerDependencies": {
+    "expo": "*"
+  },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0"
