--- a/apps/driver-app/android/app/build.gradle
+++ b/apps/driver-app/android/app/build.gradle
@@ -94,22 +94,39 @@ android {
         versionCode 1
         versionName "1.0.0"
     }
-    signingConfigs {
-        debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+signingConfigs {
+    debug {
+        storeFile file('debug.keystore')
+        storePassword 'android'
+        keyAlias 'androiddebugkey'
+        keyPassword 'android'
+    }
+    release {
+        def storeFilePath = System.getenv("DRIVER_UPLOAD_STORE_FILE") ?: project.findProperty("DRIVER_UPLOAD_STORE_FILE")
+        def storePasswordValue = System.getenv("DRIVER_UPLOAD_STORE_PASSWORD") ?: project.findProperty("DRIVER_UPLOAD_STORE_PASSWORD")
+        def keyAliasValue = System.getenv("DRIVER_UPLOAD_KEY_ALIAS") ?: project.findProperty("DRIVER_UPLOAD_KEY_ALIAS")
+        def keyPasswordValue = System.getenv("DRIVER_UPLOAD_KEY_PASSWORD") ?: project.findProperty("DRIVER_UPLOAD_KEY_PASSWORD")
+
+        if (storeFilePath) {
+            storeFile file(storeFilePath)
+        }
+        if (storePasswordValue) {
+            storePassword storePasswordValue
+        }
+        if (keyAliasValue) {
+            keyAlias keyAliasValue
+        }
+        if (keyPasswordValue) {
+            keyPassword keyPasswordValue
         }
     }
+}
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
