--- a/apps/driver-app/package.json
+++ b/apps/driver-app/package.json
@@ -23,8 +23,10 @@
     "@drt/ui-native": "workspace:*",
     "@drt/utils": "workspace:*",
     "@tanstack/react-query": "^5.0.0",
+    "babel-preset-expo": "~11.0.0",
     "expo": "~52.0.0",
     "expo-application": "~6.0.0",
+    "expo-asset": "~11.0.5",
     "expo-constants": "~17.0.0",
     "expo-image": "~2.0.0",
     "expo-linking": "~7.0.0",
