--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.0.0",
     "expo": "~52.0.0",
     "expo-application": "~6.0.0",
+    "expo-asset": "~11.0.0",
     "expo-constants": "~17.0.0",
     "expo-image": "~2.0.0",
     "expo-linking": "~7.0.0",
@@ -48,6 +49,7 @@
     "@types/react": "~18.3.0",
     "@types/react-dom": "~18.3.0",
     "autoprefixer": "^10.4.21",
+    "babel-preset-expo": "^54.0.7",
     "schema-utils": "^4.3.3",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.0"
