--- a/packages/ui-native/package.json
+++ b/packages/ui-native/package.json
@@ -27,10 +27,14 @@
   "devDependencies": {
     "@types/react": "~18.3.0",
     "@types/react-native": "^0.72.0",
+    "babel-preset-expo": "~11.0.0",
+    "expo": "~52.0.0",
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
-    "react-native": ">=0.70.0"
+    "react-native": ">=0.70.0",
+    "expo": "*",
+    "expo-constants": "*"
   }
 }
